# NEEMQuery

./: README.md  pyproject.toml  requirements.txt  update_neem_database_py.sh
.github/workflows/: publish-to-test-pypi.yml
src/neem_query/: neem_interface.py  neem_query.py  neems_database.py
test/: test_neem_query.py  test_query_result.py
