# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NEEMQuery"
version = "1.0.115"
description = "Querying the NEEMs (Narrative Enabled Episodic Memories) datasbase"
readme = "README.md"
authors = [{ name = "Abdelrhman Bassiouny", email = "abassiou@uni-bremen.de" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["query", "neems", "database", "sql", "robotics", "knowledge", "memories", "episodic"]
dependencies = ["pandas",
    "sqlalchemy",
    "typing_extensions",
    "PyMySQL"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/AbdelrhmanBassiouny/NEEMQuery"
